[package]
name = "midas_core_rust_jpmc"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
actix-web = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#rdkafka = { version = "0.34", features = ["tokio"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
reqwest = { version = "0.11", features = ["json", "gzip", "rustls-tls"] }
dotenvy = "0.15"
log = "0.4"
env_logger = "0.10"
rdkafka = { version = "0.36", features = ["tokio", "cmake-build"] }

