[package]
name = "midas_core_rust_jpmc"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
env_logger = "0.10"
log = "0.4"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }
rdkafka = { version = "0.34", features = ["tokio", "cmake-build"] }
tokio-stream = "0.1.15"  # ✅ Add this line
serde = { version = "1", features = ["derive"] }
serde_json = "1"
